--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="script.js" defer></script>
     <title>PASSWORD GENERATOR</title>
   </head>
-  <body></body>
+  <body>
+    <p id="password-generated"></p>
+  </body>
 </html>
